feat: linked UI with server2
